--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,21 @@ section {
     z-index: 1;
 }
 
-.tesla3 {
-    z-index: 5!important;
+section .content {
+    width: 100%;
+    height: 100vh;
+    padding-top: 15vh;
+    padding-bottom: 15vh;
+    text-align: center;
+    text-decoration: none;
+}
+
+section h1 {
+    font-size: 3rem;    
+    text-decoration: none;
+}
+
+section a{
+    color: inherit;
+    text-decoration: none;
 }
