--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,13 @@ header {
     .desktop {
         display: initial;
     }
+
+    section .buttons {
+        max-width: 640px;
+        margin: 0 auto;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 20px;
+    }
 }
 
 
@@ -81,6 +88,12 @@ section a{
     text-decoration: none;
 }
 
+section .content-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
 section .buttons {
     display: flex;
     justify-content: center;
@@ -88,17 +101,27 @@ section .buttons {
 }
 
 section .buttons a{
-    display: block;
     color: inherit;
     background-color: #eee;
-    padding: 12px 50px;
-    border-radius: 25px;
+    padding: 8px 90px;
+    border-radius: 5px;
     text-decoration: none;
     font-size: 16px;
     font-weight: 500;
+    margin-left: 25px;
 }
 
-section .content-buttons {
+section .buttons a:first-child{
+    background-color: #444;
+    color: #fff;
+}
+
+aside {
+    bottom: 0;
+    left: 0;
+    max-width: 100%;
+    z-index: 999;
+    position: fixed;
     display: flex;
-    flex-direction: flex-end;
+    flex-direction: column;
 }
